- NEW: Command line param /bugid to prefill the bug ID
       in the commit dialog. See issue #202 for details. (Stefan)
- NEW: User defined regexes to parse the files for keywords used
       for autoexpanding in the commit dialog can now be stored
       in %APPDATA%\TortoiseSVN\autolist.txt so they won't get
       overwritten on upgrades. (Stefan)

Version 1.3.1
- BUG: Patches with non ANSI or non UTF8 encoding couldn't be applied
       correctly. (Stefan)

Version 1.3.0
- NEW: The settings dialog now has a button to open the system sound
       dialog where the TSVN sounds can be configured.
       See issue #167. (Stefan)
- NEW: Keyboard accelerators for the shell context menu. 
       See issue #171. (Stefan)
- NEW: A warning is shown if the user tries to close the explorer property
       sheet without having saved modified properties yet. (Stefan)
- NEW: Show network transfer speed for DAV connections where possible and
       it makes sense. See issue #177. (Stefan)
- NEW: Rebuilding the icon cache can be done by calling TortoiseProc from
       the command line. See our help files for details. (Stefan, Leon Zandman)
- NEW: Setting the environment variable SVN_ASP_DOT_NET_HACK makes TSVN
       use '_svn' as the Subversion admin dirs instead of '.svn'.
       A restart of Windows is required for this to take effect. (Stefan)
- NEW: Colors used in TortoiseSVN are now configurable in the
       settings dialog. (Stefan)
- NEW: Last commit author, revision and date are shown in the "Check for
       modifications" dialog after a "Check repository". (Stefan)
- NEW: The URL where TSVN checks if updates are available can now be
       configured in the registry. This might be useful for company
       admins which provide their users the updates from their servers.
       The registry entry is "Software\TortoiseSVN\UpdateCheckURL". (Stefan)
- NEW: "Show Log" command from the revision graph. See issue #184. (Stefan)